fix(links, alignments): added navbar alignments and navigation to auth/login

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -7,7 +7,7 @@
 @layer base {
   body {
     @apply font-primary;
-    @apply !overflow-x-hidden;
+    overflow-x: hidden !important;
   }
 }
 
@@ -33,7 +33,7 @@
   border: 1px solid #999999 !important;
 }
 
-.swiper-pagination > .swiper-pagination-bullet {
+.swiper-pagination>.swiper-pagination-bullet {
   @apply mr-2 rounded-full;
   background: white;
   opacity: 1;
@@ -43,7 +43,33 @@
 }
 
 .swiper-pagination-bullet-active {
-  @apply !bg-black;
+  background-color: rgb(0, 0, 0); // important
+}
+
+.swiper-pagination {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.pagination-class>.swiper-pagination-progressbar-fill {
+  background-color: rgb(255 204 0) !important;
+  top: -4px !important;
+  height: 5px !important;
+}
+
+.swiper-pagination-progressbar.swiper-pagination-horizontal {
+  height: 0.5px !important;
+  background-color: rgb(153 153 153) !important
+}
+
+.swiper-slide {
+  height: auto !important;
 }
 
 .react-rotating-text-cursor {
@@ -87,7 +113,7 @@
   list-style-position: inside;
 }
 
-.policy-page ul > li {
+.policy-page ul>li {
   @apply my-2;
 }
 
@@ -142,34 +168,6 @@ dt {
 }
 
 .illustration svg {
-  @apply mx-auto;
+
   @apply min-h-[100px];
-}
-
-@screen md {
-  .illustration svg {
-    @apply mx-0;
-  }
-}
-
-.swiper-pagination {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 20px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.pagination-class > .swiper-pagination-progressbar-fill {
-  @apply !bg-n-yellow;
-  top: -4px !important;
-  height: 5px !important;
-}
-
-.swiper-pagination-progressbar.swiper-pagination-horizontal {
-  height: 0.5px !important;
-  @apply !bg-n-grey3;
 }
